# Sunlight

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: Editor.cpp  Editor.h  EditorState.cpp  EditorState.h  ImGuiContext.cpp  ImGuiContext.h  Sunlight.cpp  Sunlight.h  entrypoint.cpp
src/UI/: IEditorPanel.h  InspectorPanel.cpp  InspectorPanel.h  ProfilerPanel.cpp  ProfilerPanel.h  RenderSettingsPanel.cpp  RenderSettingsPanel.h  SceneHierarchyPanel.cpp  SceneHierarchyPanel.h  ViewportPanel.cpp  ViewportPanel.h
